Closed Bug 1811747 Opened 1 year ago Closed 1 year ago

Crash in [@ mozilla::IdentityCredentialStorageService::Observe]

Categories

(Core :: DOM: Credential Management, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 --- unaffected
firefox111 blocking fixed

People

(Reporter: gsvelto, Assigned: bvandersloot)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/4e4f0ea6-5cb3-4652-9799-9604f0230122

Reason: EXCEPTION_ACCESS_VIOLATION_READ

Top 10 frames of crashing thread:

0  xul.dll  mozilla::IdentityCredentialStorageService::Observe  toolkit/components/credentialmanagement/IdentityCredentialStorageService.cpp:820
1  xul.dll  nsObserverList::NotifyObservers  xpcom/ds/nsObserverList.cpp:70
1  xul.dll  nsObserverService::NotifyObservers  xpcom/ds/nsObserverService.cpp:291
2  xul.dll  DecreasePrivateCount  docshell/base/CanonicalBrowsingContext.cpp:110
3  xul.dll  mozilla::dom::CanonicalBrowsingContext::CanonicalDiscard  docshell/base/CanonicalBrowsingContext.cpp:1265
3  xul.dll  mozilla::dom::BrowsingContext::Detach  docshell/base/BrowsingContext.cpp:889
4  xul.dll  mozilla::dom::ContentParent::RecvDiscardBrowsingContext  dom/ipc/ContentParent.cpp:7223
5  xul.dll  mozilla::dom::PContentParent::OnMessageReceived  ipc/ipdl/PContentParent.cpp:14734
6  xul.dll  mozilla::ipc::MessageChannel::DispatchAsyncMessage  ipc/glue/MessageChannel.cpp:1800
6  xul.dll  mozilla::ipc::MessageChannel::DispatchMessage  ipc/glue/MessageChannel.cpp:1725

This looks like a regression from bug 1802920, Benjamin can you have a look?

Flags: needinfo?(bvandersloot)

Set release status flags based on info from the regressing bug 1802920

The bug is marked as blocking firefox111 (nightly). However, the bug still isn't assigned.

:ckerschb, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit auto_nag documentation.

Flags: needinfo?(ckerschb)

That is the correct regression. Given the crash reports, I can get this resolved quickly.

Assignee: nobody → bvandersloot
Flags: needinfo?(bvandersloot)
Pushed by bvandersloot@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5b1df47f2992
Fix Crash in [@ mozilla::IdentityCredentialStorageService::Observe] - r=timhuang
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch

(In reply to Release mgmt bot [:suhaib / :marco/ :calixte] from comment #2)

:ckerschb, could you please find an assignee for this tracked bug?

BenVds and I synced on Slack - he is on it...

Flags: needinfo?(ckerschb)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: