Bug 1811747 - Fix Crash in [@ mozilla::IdentityCredentialStorageService::Observe] - r=timhuang

Differential Revision: https://phabricator.services.mozilla.com/D167549